@@ -1,3 +1,10 @@
+Tue May 18 12:01:14 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/CAD_Handler.cpp:
+        * DnC/Config_Handlers/CAD_Handler.h:
+
+          Updated to handle HREF and IDREF tags.
+
 Tue May 18 06:30:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DnC/NodeApplicationManager/NodeApplicationManager.mpc:
